Изменения в блоке head

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -2,7 +2,10 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<meta name="author" content="Елушев Максим">
+	<meta name="description" content="Данный сайт содержит информацию про туманности">
+	<link rel="shortcut icon" href="images/nebula.ico">
+	<title>Туманности</title>
 </head>
 <body>
 
