--- a/Lab1/planetary_nebula.html
+++ b/Lab1/planetary_nebula.html
@@ -5,17 +5,17 @@
 	<meta name="author" content="Елушев Максим">
 	<meta name="description" content="Данный сайт содержит информацию про туманности">
 	<link rel="shortcut icon" href="images/nebula.ico">
-	<title>Туманность</title>
+	<title>Планетарная туманность</title>
 </head>
 <body>
 <header>
-	<h1>Туманность</h1>
+	<h1>Планетарная туманность</h1>
 </header>
 <nav>
 	<ul>
+		<li><a href="index.html">Туманность</a></li>
 		<li><a href="dark_nebula.html">Тёмная туманность</a></li>
 		<li><a href="reflection_nebula.html">Отражательная туманность</a></li>
-		<li><a href="planetary_nebula.html">Планетарная туманность</a></li>
 		<li><a href="supernova_remnant.html">Остаток сверхновой</a></li>
 	</ul>
 </nav>
