added main and footer

--- a/Lab1/dark_nebula.html
+++ b/Lab1/dark_nebula.html
@@ -8,7 +8,6 @@
 	<title>Тёмная туманность</title>
 </head>
 <body>
-
 <header>
 	<h1>Тёмная туманность</h1>
 	<nav>
@@ -20,6 +19,68 @@
 		</ul>
 	</nav>
 </header>
-
+<hr>
+<main>
+	<section>
+		<h2>Что такое тёмная туманность?</h2>
+		<p><b>Тёмная туманность</b> - это области межзвёздного пространства, где газ и пыль поглощают свет звёзд, что
+			делает эти области тёмными на фоне звёздного неба. Тёмные туманности часто называют <i>"пылевыми
+				облаками"</i>, так как они состоят из газа и мелких частиц пыли, которые могут стать зародышами для
+			звёзд и планет.</p>
+		
+		<h2>Характеристики</h2>
+		<p>Тёмные туманности имеют свои уникальные характеристики. Вот некоторые из них:</p>
+		<ul>
+			<li><b>Внешний вид</b>. Темные туманности выглядят как темные, затененные пятна на более ярком фоне звезд
+				или
+				светящегося газа. Они могут иметь неправильные формы и размеры и могут быть связаны с другими
+				туманностями или областями звездообразования.
+			</li>
+			<li><b>Состав</b>. Темные туманности состоят из частиц пыли и молекулярного газа, которые являются теми же
+				строительными блоками для звездообразования.
+			</li>
+			<li><b>Размер</b>. Размеры темных туманностей могут варьироваться от нескольких световых лет в поперечнике
+				до сотен
+				световых лет в диаметре.
+			</li>
+			<li><b>Местоположение</b>. Темные туманности часто встречаются в плоскости галактики Млечный Путь, где
+				наблюдается
+				высокая концентрация звезд и межзвездного газа и пыли.
+			</li>
+		</ul>
+		<p>В целом, темные туманности играют важную роль в жизненном цикле звезд, и их изучение помогло нам лучше понять
+			формирование и эволюцию галактик.</p>
+		
+		<h2>Галерея</h2>
+		<table>
+			<tr>
+				<td>
+					<figure>
+						<img src="images/КонскаяГолова.png"
+						     alt="Тёмная туманность: конская голова, межзвёздное облако"
+						     title="Конская голова"
+						     width="600"
+						     height="auto">
+						<figcaption>Конская голова</figcaption>
+					</figure>
+				</td>
+				<td>
+					<figure>
+						<img src="images/Конус.png"
+						     alt="Тёмная туманность: конус, межзвёздное облако"
+						     title="Конус"
+						     width="611"
+						     height="auto">
+						<figcaption>Конус</figcaption>
+					</figure>
+				</td>
+			</tr>
+		</table>
+	</section>
+</main>
+<hr>
+<footer role="contentinfo">
+	<p>&copy; 2023 Туманности</p>
+</footer>
 </body>
 </html>
