--- a/Lab1/reflection_nebula.html
+++ b/Lab1/reflection_nebula.html
@@ -20,6 +20,88 @@
 	</ul>
   </nav>
 </header>
-
+<hr>
+<main>
+  <section>
+	<h2>Что такое отражательная туманность?</h2>
+	<p><b>Отражательная туманность</b> - это область межзвездного пространства, состоящая из газовых и пылевых частиц,
+	  которые рассеивают свет от близлежащих звезд и создают свою собственное свечение. Она образуется, когда звезды в
+	  ее близости испускают свет, который отражается от этих частиц, создавая небольшой светящийся объект на ночном
+	  небе. Отражательные туманности являются одним из типов туманностей в нашей галактике и могут иметь различные формы
+	  и размеры.</p>
+	
+	<h2>Характеристики</h2>
+	<p>Отражательные туманности имеют свои уникальные характеристики. Вот некоторые из них:</p>
+	<ul>
+	  <li><b>Состав</b>. Отражательная туманность состоит из газов и пылевых частиц различного размера и химического
+		состава.
+	  </li>
+	  <li><b>Расположение</b>. Отражательные туманности обычно находятся вблизи звездных скоплений, областей
+		звездообразования и других активных областей галактик.
+	  </li>
+	  <li><b>Цвет</b>. Отражательная туманность может иметь различные цвета, от белого до голубого, в зависимости от
+		того, какие частицы в ней преобладают.
+	  </li>
+	  <li><b>Яркость</b>. Яркость отражательной туманности зависит от ее плотности, размера и расстояния от источника
+		света.
+	  </li>
+	  <li><b>Размеры</b>. Отражательные туманности могут иметь различные размеры, от нескольких световых лет до сотен
+		световых лет.
+	  </li>
+	</ul>
+	
+	<h2>Галерея</h2>
+	<table>
+	  <tr>
+		<td>
+		  <figure>
+			<img src="images/БегущийЧеловек.png"
+				 alt="Отражательная туманность: бегущий человек, межзвёздное облако"
+				 title="Бегущий Человек"
+				 width="700"
+				 height="auto">
+			<figcaption>Бегущий Человек</figcaption>
+		  </figure>
+		</td>
+		<td>
+		  <figure>
+			<img src="images/ГоловаВедьмы.png"
+				 alt="Отражательная туманность: голова ведьмы, межзвёздное облако"
+				 title="Голова Ведьмы"
+				 width="471"
+				 height="auto">
+			<figcaption>Голова Ведьмы</figcaption>
+		  </figure>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  <figure>
+			<img src="images/NGC_1435.png"
+				 alt="Отражательная туманность: межзвёздное облако"
+				 title="NGC 1435"
+				 width="700"
+				 height="auto">
+			<figcaption>NGC 1435</figcaption>
+		  </figure>
+		</td>
+		<td>
+		  <figure>
+			<img src="images/Messier78.png"
+				 alt="Отражательная туманность: межзвёздное облако"
+				 title="Messier 78"
+				 width="460"
+				 height="auto">
+			<figcaption>Messier 78</figcaption>
+		  </figure>
+		</td>
+	  </tr>
+	</table>
+  </section>
+</main>
+<hr>
+<footer role="contentinfo">
+  <p>&copy; 2023 Туманности</p>
+</footer>
 </body>
 </html>
