добавил к страницам содержание

--- a/Lab1/dark_nebula.html
+++ b/Lab1/dark_nebula.html
@@ -22,13 +22,13 @@
 <hr>
 <main>
   <section>
-	<h2>Что такое тёмная туманность?</h2>
+	<h2 id="section1">Что такое тёмная туманность?</h2>
 	<p><b>Тёмная туманность</b> - это области межзвёздного пространства, где газ и пыль поглощают свет звёзд, что
 	  делает эти области тёмными на фоне звёздного неба. Тёмные туманности часто называют <i>"пылевыми
 		облаками"</i>, так как они состоят из газа и мелких частиц пыли, которые могут стать зародышами для
 	  звёзд и планет.</p>
 	
-	<h2>Характеристики</h2>
+	<h2 id="section2">Характеристики</h2>
 	<p>Тёмные туманности имеют свои уникальные характеристики. Вот некоторые из них:</p>
 	<ul>
 	  <li><b>Внешний вид</b>. Темные туманности выглядят как темные, затененные пятна на более ярком фоне звезд
@@ -48,8 +48,7 @@
 	<p>В целом, темные туманности играют важную роль в жизненном цикле звезд, и их изучение помогло нам лучше понять
 	  формирование и эволюцию галактик.</p>
 	
-	<h2>Галерея</h2>
-	
+	<h2 id="section3">Галерея</h2>
 	<table>
 	  <tr>
 		<td>
@@ -75,6 +74,14 @@
 	  </tr>
 	</table>
   </section>
+  <aside>
+	<h2>Содержание</h2>
+	<ul>
+	  <li><a href="#section1">Что такое тёмная туманность?</a></li>
+	  <li><a href="#section2">Характеристики</a></li>
+	  <li><a href="#section3">Галерея</a></li>
+	</ul>
+  </aside>
 </main>
 <hr>
 <footer role="contentinfo">
