--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -23,12 +23,12 @@
 <hr>
 <main>
   <section>
-	<h2>Что такое туманность?</h2>
+	<h2 id="section1">Что такое туманность?</h2>
 	<p><b>Туманность</b> - это область космического пространства, состоящая из <i>плазмы</i>, <i>газа</i> и
 	  <i>пыли</i>, которые могут быть видны благодаря рассеянному свету от близлежащих звезд. Туманности могут
 	  быть различных размеров и форм, и они являются местами рождения звезд и планет.</p>
 	
-	<h2>История наблюдений туманностей</h2>
+	<h2 id="section2">История наблюдений туманностей</h2>
 	<p>Наблюдения туманностей начались еще в древние времена, но до изобретения телескопа они не имели точного
 	  объяснения. В Древней Греции и Риме туманности описывались как "кометы без хвоста". В средние века
 	  европейские ученые также описывали туманности, но считали их частью <i>Млечного Пути</i>.
@@ -48,7 +48,7 @@
 	  высокой разрешающей способностью и получать детальные снимки, спектры и другие данные. Эти исследования
 	  помогают расширить наше понимание <i>Вселенной</i> и ее эволюции.</p>
 	
-	<h2>Формирование туманностей</h2>
+	<h2 id="section3">Формирование туманностей</h2>
 	<p>Туманности формируются из облаков газа и пыли в космическом пространстве. Эти облака могут быть различных
 	  размеров и могут содержать различные элементы, такие как <i>водород</i>, <i>гелий</i>, <i>кислород</i>,
 	  <i>углерод</i> и другие. Элементы в облаках взаимодействуют друг с другом и с близлежащими звездами, что
@@ -68,6 +68,14 @@
 	  газа и пыли, плотность облаков, наличие звезд и других факторов. Каждая туманность уникальна и имеет своё
 	  собственное происхождение и характеристики.</p>
   </section>
+  <aside>
+	<h2>Содержание</h2>
+	<ul>
+	  <li><a href="#section1">Что такое туманность?</a></li>
+	  <li><a href="#section2">История наблюдений туманностей</a></li>
+	  <li><a href="#section3">Формирование туманностей</a></li>
+	</ul>
+  </aside>
 </main>
 <hr>
 <footer role="contentinfo">
