--- a/Lab1/planetary_nebula.html
+++ b/Lab1/planetary_nebula.html
@@ -23,13 +23,13 @@
 <hr>
 <main>
   <section>
-	<h2>Что такое планетарная туманность?</h2>
+	<h2 id="section1">Что такое планетарная туманность?</h2>
 	<p><b>Планетарная туманность</b> - это космическое облако газа и пыли, которое образуется в результате смерти
 	  звезды. Когда звезда средней массы, подобной Солнцу, исчерпывает запас топлива в своем ядре, она начинает
 	  сжиматься под давлением своей собственной гравитации. В результате этого процесса внутренние слои звезды
 	  начинают нагреваться и расширяться, что приводит к выбросу газа и образованию планетарной туманности.</p>
 	
-	<h2>Характеристики</h2>
+	<h2 id="section2">Характеристики</h2>
 	<p>Планетарные туманности имеют свои уникальные характеристики. Вот некоторые из них:</p>
 	<ul>
 	  <li><b>Размеры</b>. Планетарные туманности обычно имеют размеры от нескольких десятков до нескольких
@@ -47,7 +47,7 @@
 	  </li>
 	</ul>
 	
-	<h2>Галерея</h2>
+	<h2 id="section3">Галерея</h2>
 	<table>
 	  <tr>
 		<td>
@@ -95,6 +95,14 @@
 	  </tr>
 	</table>
   </section>
+  <aside>
+	<h2>Содержание</h2>
+	<ul>
+	  <li><a href="#section1">Что такое планетарная туманность?</a></li>
+	  <li><a href="#section2">Характеристики</a></li>
+	  <li><a href="#section3">Галерея</a></li>
+	</ul>
+  </aside>
 </main>
 <hr>
 <footer role="contentinfo">
