--- a/Lab1/reflection_nebula.html
+++ b/Lab1/reflection_nebula.html
@@ -23,14 +23,14 @@
 <hr>
 <main>
   <section>
-	<h2>Что такое отражательная туманность?</h2>
+	<h2 id="section1">Что такое отражательная туманность?</h2>
 	<p><b>Отражательная туманность</b> - это область межзвездного пространства, состоящая из газовых и пылевых частиц,
 	  которые рассеивают свет от близлежащих звезд и создают свою собственное свечение. Она образуется, когда звезды в
 	  ее близости испускают свет, который отражается от этих частиц, создавая небольшой светящийся объект на ночном
 	  небе. Отражательные туманности являются одним из типов туманностей в нашей галактике и могут иметь различные формы
 	  и размеры.</p>
 	
-	<h2>Характеристики</h2>
+	<h2 id="section2">Характеристики</h2>
 	<p>Отражательные туманности имеют свои уникальные характеристики. Вот некоторые из них:</p>
 	<ul>
 	  <li><b>Состав</b>. Отражательная туманность состоит из газов и пылевых частиц различного размера и химического
@@ -50,7 +50,7 @@
 	  </li>
 	</ul>
 	
-	<h2>Галерея</h2>
+	<h2 id="section3">Галерея</h2>
 	<table>
 	  <tr>
 		<td>
@@ -98,6 +98,14 @@
 	  </tr>
 	</table>
   </section>
+  <aside>
+	<h2>Содержание</h2>
+	<ul>
+	  <li><a href="#section1">Что такое отражательная туманность?</a></li>
+	  <li><a href="#section2">Характеристики</a></li>
+	  <li><a href="#section3">Галерея</a></li>
+	</ul>
+  </aside>
 </main>
 <hr>
 <footer role="contentinfo">
