--- a/Lab1/supernova_remnant.html
+++ b/Lab1/supernova_remnant.html
@@ -23,12 +23,12 @@
 <hr>
 <main>
   <section>
-	<h2>Что такое остаток сверхновой?</h2>
+	<h2 id="section1">Что такое остаток сверхновой?</h2>
 	<p><b>Остаток сверхновой</b> - это туманность, которая образуется в результате взрыва сверхновой звезды. Когда
 	  звезда исчерпывает свое топливо, ядро звезды сжимается под воздействием гравитации, что приводит к взрыву
 	  сверхновой.</p>
 	
-	<h2>Образование сверхновой</h2>
+	<h2 id="section2">Образование сверхновой</h2>
 	<p>Остаток сверхновой образуется в результате взрыва сверхновой звезды. Когда звезда исчерпывает свои запасы
 	  ядерного топлива, ядро звезды начинает коллапсировать под воздействием гравитации. Этот процесс приводит к очень
 	  высокому давлению и температуре в ядре звезды, что может вызвать вспышку ядерного синтеза и взрыв сверхновой.
@@ -44,7 +44,7 @@
 	  образуя остаток сверхновой. В процессе расширения остаток сверхновой взаимодействует с окружающей средой и может
 	  создавать светящиеся облака газа и пыли, которые называются туманностями сверхновых.</p>
 	
-	<h2>Стадии эволюции</h2>
+	<h2 id="section3">Стадии эволюции</h2>
 	<p>Существует несколько стадий эволюции остатка сверхновой:</p>
 	<ul>
 	  <li><b>Стадия сверхновой</b>. Звезда, не способная противостоять гравитации, коллапсирует, вызывая взрыв
@@ -66,7 +66,7 @@
 	  элементами, которые образовались в звездах. Они также служат источниками космических лучей и могут быть
 	  использованы для изучения свойств космической материи.</p>
 	
-	<h2>Галерея</h2>
+	<h2 id="section4">Галерея</h2>
 	<table>
 	  <tr>
 		<td>
@@ -114,6 +114,15 @@
 	  </tr>
 	</table>
   </section>
+  <aside>
+	<h2>Содержание</h2>
+	<ul>
+	  <li><a href="#section1">Что такое остаток сверхновой?</a></li>
+	  <li><a href="#section2">Образование сверхновой</a></li>
+	  <li><a href="#section3">Стадии эволюции</a></li>
+	  <li><a href="#section4">Галерея</a></li>
+	</ul>
+  </aside>
 </main>
 <hr>
 <footer role="contentinfo">
