добавил галерею на главную страницу

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -67,6 +67,54 @@
 	  В целом, формирование туманностей - это сложный процесс, который зависит от многих факторов, включая состав
 	  газа и пыли, плотность облаков, наличие звезд и других факторов. Каждая туманность уникальна и имеет своё
 	  собственное происхождение и характеристики.</p>
+  
+	<h2 id="section4">Галерея</h2>
+	<table>
+	  <tr>
+		<td>
+		  <figure>
+			<img src="images/Тарантул.png"
+				 alt="Туманность: тарантул, межзвёздное облако"
+				 title="Тарантул"
+				 width="600"
+				 height="auto">
+			<figcaption>Тарантул</figcaption>
+		  </figure>
+		</td>
+		<td>
+		  <figure>
+			<img src="images/carina_nebula.png"
+				 alt="Туманность: туманность Киля, межзвёздное облако"
+				 title="Туманность Киля"
+				 width="595"
+				 height="auto">
+			<figcaption>Туманность Киля</figcaption>
+		  </figure>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		  <figure>
+			<img src="images/Розетка.png"
+				 alt="Туманность: розетка, межзвёздное облако"
+				 title="Розетка"
+				 width="598"
+				 height="auto">
+			<figcaption>Розетка</figcaption>
+		  </figure>
+		</td>
+		<td>
+		  <figure>
+			<img src="images/N44.png"
+				 alt="Туманность: межзвёздное облако"
+				 title="N 44"
+				 width="600"
+				 height="auto">
+			<figcaption>N 44</figcaption>
+		  </figure>
+		</td>
+	  </tr>
+	</table>
   </section>
   <aside>
 	<h2>Содержание</h2>
@@ -74,6 +122,7 @@
 	  <li><a href="#section1">Что такое туманность?</a></li>
 	  <li><a href="#section2">История наблюдений туманностей</a></li>
 	  <li><a href="#section3">Формирование туманностей</a></li>
+	  <li><a href="#section4">Галерея</a></li>
 	</ul>
   </aside>
 </main>
