added styles to all pages

--- a/Lab2/planetary_nebula.html
+++ b/Lab2/planetary_nebula.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Данный сайт содержит информацию про туманности">
   <link rel="shortcut icon" href="images/nebula.ico">
   <title>Планетарная туманность</title>
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
