--- a/Lab2/dark_nebula.html
+++ b/Lab2/dark_nebula.html
@@ -5,6 +5,7 @@
   <meta name="author" content="Елушев Максим">
   <meta name="description" content="Данный сайт содержит информацию про туманности">
   <link rel="shortcut icon" href="images/nebula.ico">
+	<link rel="stylesheet" href="styles/style.css">
   <title>Тёмная туманность</title>
 </head>
 <body>
