page layout with homework and other

--- a/Lab3/grades.html
+++ b/Lab3/grades.html
@@ -12,9 +12,9 @@
 	<h1>Оценки</h1>
 	<nav>
 		<ul>
-			<li><p>Расписание</p></li>
-			<li><p>Домашнее задание</p></li>
-			<li><p>Профиль</p></li>
+			<li><a href="schedule.html">Расписание</a></li>
+			<li><a href="homework.html">Домашнее задание</a></li>
+			<li><a href="profile.html">Профиль</a></li>
 		</ul>
 	</nav>
 </header>
