--- a/Lab3/schedule.html
+++ b/Lab3/schedule.html
@@ -12,9 +12,9 @@
 	<h1>Расписание</h1>
 	<nav>
 		<ul>
-			<li><p>Оценки</p></li>
-			<li><p>Домашнее задание</p></li>
-			<li><p>Профиль</p></li>
+			<li><a href="grades.html">Оценки</a></li>
+			<li><a href="homework.html">Домашнее задание</a></li>
+			<li><a href="profile.html">Профиль</a></li>
 		</ul>
 	</nav>
 </header>
