--- a/Lab3/html/homework.html
+++ b/Lab3/html/homework.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="Елушев Максим">
 	<meta name="description" content="Электронный журнал для преподавателя">
-	<link rel="shortcut icon" href="favicon.svg">
+	<link rel="shortcut icon" href="../images/favicon.svg">
 	<title>Домашнее задание</title>
 </head>
 <body>
