--- a/Lab3/html/schedule.html
+++ b/Lab3/html/schedule.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="Елушев Максим">
 	<meta name="description" content="Электронный журнал для преподавателя">
-	<link rel="shortcut icon" href="favicon.svg">
+	<link rel="shortcut icon" href="../images/favicon.svg">
 	<title>Расписание</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
 				<td>3</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -56,7 +56,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -69,7 +69,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -101,7 +101,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -114,7 +114,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -146,7 +146,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -159,7 +159,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -172,7 +172,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -215,7 +215,7 @@
 				<td>3</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -228,7 +228,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
@@ -241,7 +241,7 @@
 				<td>7</td>
 				<td>
 					<a href="#">
-						<img src="calendar.svg" alt="Расписание группы" width="15" height="15">
+						<img src="../images/calendar.svg" alt="Расписание группы" width="15" height="15">
 					</a>
 				</td>
 			</tr>
