--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -8,8 +8,8 @@
 	<meta name="author" content="Елушев Максим">
 	<meta name="description" content="Электронный журнал для преподавателя">
 	<link rel="shortcut icon" href="images/favicon.svg">
-	<link rel="stylesheet" href="style.css">
-	<title>Электронный журнал</title>
+	<link rel="stylesheet" href="css/index.css">
+	<title>Журнал преподавателя</title>
 </head>
 <body>
 <main class="main">
