--- a/Lab4/html/grades.html
+++ b/Lab4/html/grades.html
@@ -381,7 +381,7 @@
 	</section>
 </main>
 <footer class="footer" role="contentinfo">
-	<p class="footer__text">&copy; 2023 Журнал преподавателя</p>
+	<p class="footer__text">&copy; 2023 Электронный журнал</p>
 </footer>
 </body>
 </html>
