changed the design of the homework

--- a/dynamic/pages/profile.html
+++ b/dynamic/pages/profile.html
@@ -14,12 +14,12 @@
 <body class="body">
 <header class="header">
 	<nav class="nav">
-		<a class="logo" href="#">
+		<a class="logo" href="grades.html">
 			<img src="../images/logo.svg" alt="Книга: лого сайта">
 		</a>
 		<ul class="menu">
 			<li class="menu__list">
-				<a class="menu__link--underline" href="grades.html">Оценки</a>
+				<a class="menu__link" href="grades.html">Оценки</a>
 			</li>
 			<li class="menu__list">
 				<a class="menu__link" href="schedule.html">Расписание</a>
@@ -76,9 +76,7 @@
 	</section>
 </main>
 <footer class="footer" role="contentinfo">
-	<p class="footer__copyright">
-		&copy; 2023 Электронный журнал
-	</p>
+	<p class="footer__text">&copy; 2023 Электронный журнал</p>
 </footer>
 </body>
 </html>
