--- a/dynamic/pages/homework.html
+++ b/dynamic/pages/homework.html
@@ -2,83 +2,106 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport"
+	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="author" content="Елушев Максим">
 	<meta name="description" content="Электронный журнал для преподавателя">
 	<link rel="shortcut icon" href="../images/favicon.svg">
+	<link rel="stylesheet" href="../styles/homework.css">
 	<title>Домашнее задание</title>
 </head>
-<body>
-<header>
-	<h1>Домашнее задание</h1>
-	<nav>
-		<ul>
-			<li><a href="schedule.html">Расписание</a></li>
-			<li><a href="grades.html">Оценки</a></li>
-			<li><a href="profile.html">Профиль</a></li>
+<body class="body">
+<header class="header">
+	<nav class="nav">
+		<a class="logo" href="grades.html">
+			<img src="../images/logo.svg" alt="Книга: лого сайта">
+		</a>
+		<ul class="menu">
+			<li class="menu__list">
+				<a class="menu__link" href="grades.html">Оценки</a>
+			</li>
+			<li class="menu__list">
+				<a class="menu__link" href="schedule.html">Расписание</a>
+			</li>
+			<li class="menu__list">
+				<a class="menu__link--underline" href="homework.html">Домашнее задание</a>
+			</li>
 		</ul>
+		<a class="user" href="profile.html">
+			<img src="../images/user.svg" alt="Иконка пользователя">
+		</a>
 	</nav>
 </header>
-<main>
-	<section>
-		<form>
-			<label for="subject">Дисциплина:</label>
-			<select name="subject" id="subject">
-				<option>-- Выберите дисциплину --</option>
-				<option>Объектно-ориентированное программирование</option>
-				<option>Структуры и алгоритмы обработки данных</option>
-				<option>Теория формальных языков и методы трансляции</option>
+<main class="main">
+	<section class="homework">
+		<div class="homework__select-row">
+			<select class="homework__select">
+				<option class="homework__option">Выберите дисциплину</option>
+				<option class="homework__option">Объектно-ориентированное программирование</option>
+				<option class="homework__option">Структуры и алгоритмы обработки данных</option>
+				<option class="homework__option">Теория формальных языков и методы трансляции</option>
 			</select>
-			<br><br>
-			<label for="group">Группа</label>
-			<select name="group" id="group">
-				<option value="">-- Выберите группу --</option>
-				<option value="group1">Группа 1</option>
-				<option value="group2">Группа 2</option>
-				<option value="group3">Группа 3</option>
+			<select class="homework__select">
+				<option class="homework__option">Выберите группу</option>
+				<option class="homework__option">Группа 1</option>
+				<option class="homework__option">Группа 2</option>
+				<option class="homework__option">Группа 3</option>
 			</select>
-			<br><br>
-		</form>
-		<h2>Таблица домашнего задания</h2>
-		<table>
-			<thead>
-			<tr>
-				<th>Дата</th>
-				<th>Тема занятия</th>
-				<th>Домашнее задание</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr>
-				<th>01.04</th>
-				<td><textarea name="theme1"></textarea></td>
-				<td><textarea name="homework1"></textarea></td>
-			</tr>
-			<tr>
-				<th>08.04</th>
-				<td><textarea name="theme2"></textarea></td>
-				<td><textarea name="homework2"></textarea></td>
-			</tr>
-			<tr>
-				<th>15.04</th>
-				<td><textarea name="theme3"></textarea></td>
-				<td><textarea name="homework3"></textarea></td>
-			</tr>
-			<tr>
-				<th>22.04</th>
-				<td><textarea name="theme4"></textarea></td>
-				<td><textarea name="homework4"></textarea></td>
-			</tr>
-			<tr>
-				<th>29.04</th>
-				<td><textarea name="theme5"></textarea></td>
-				<td><textarea name="homework5"></textarea></td>
-			</tr>
-			</tbody>
-		</table>
+		</div>
+		<div class="container">
+			<table class="homework__table">
+				<thead class="homework__table-head">
+				<tr>
+					<th class="homework__table-header">Дата</th>
+					<th class="homework__table-header">Тема занятия</th>
+					<th class="homework__table-header">Домашнее задание</th>
+				</tr>
+				</thead>
+				<tbody class="homework__table-body">
+				<tr class="homework__table-row">
+					<th class="homework__table-date">01.04</th>
+					<td class="homework__table-theme">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+					<td class="homework__table-homework">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+				</tr>
+				<tr class="homework__table-row">
+					<th class="homework__table-date">08.04</th>
+					<td class="homework__table-theme">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+					<td class="homework__table-homework">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+				</tr>
+				<tr class="homework__table-row">
+					<th class="homework__table-date">15.04</th>
+					<td class="homework__table-theme">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+					<td class="homework__table-homework">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+				</tr>
+				<tr class="homework__table-row">
+					<th class="homework__table-date">22.04</th>
+					<td class="homework__table-theme">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+					<td class="homework__table-homework">
+						<textarea class="homework__textarea"></textarea>
+					</td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
 	</section>
 </main>
-<footer role="contentinfo">
-	<p>&copy; 2023 Электронный журнал</p>
+<footer class="footer" role="contentinfo">
+	<p class="footer__text">&copy; 2023 Электронный журнал</p>
 </footer>
 </body>
 </html>
