--- a/dynamic/pages/schedule.html
+++ b/dynamic/pages/schedule.html
@@ -14,7 +14,7 @@
 <body class="body">
 <header class="header">
 	<nav class="nav">
-		<a class="logo" href="#">
+		<a class="logo" href="../index.html">
 			<img src="../images/logo.svg" alt="Книга: лого сайта">
 		</a>
 		<ul class="menu">
